Add status page with external service monitoring (secure version)

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ GITHUB_TOKEN=your_github_personal_access_token_here
 # GitHub Username
 NEXT_PUBLIC_GITHUB_USERNAME=ShangYi7
 
+# WakaTime API Key (for coding stats)
+WAKATIME_API_KEY=your_wakatime_api_key_here
+
 # Site Configuration
 NEXT_PUBLIC_SITE_URL=https://your-domain.vercel.app
 NEXT_PUBLIC_SITE_NAME=ShangYi7
