feat: 新增FiveM服务器监控功能
实现FiveM服务器玩家监控功能，包括：
- 添加API路由获取服务器配置和玩家数据
- 创建监控页面展示服务器在线人数和图表
- 添加定时任务脚本记录数据
- 支持通过环境变量配置监控的服务器列表
- 使用Chart.js实现数据可视化

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,25 @@
-# GitHub API Token (optional, for higher rate limits)
-GITHUB_TOKEN=your_github_personal_access_token_here
+# ---- 環境變數示例 ----
 
-# GitHub Username
-NEXT_PUBLIC_GITHUB_USERNAME=ShangYi7
+# GitHub (可選)
+# NEXT_PUBLIC_GITHUB_USERNAME=你的GitHub用戶名
+# GITHUB_TOKEN=你的GitHub個人訪問令牌
 
-# WakaTime API Key (for coding stats)
-WAKATIME_API_KEY=your_wakatime_api_key_here
+# Google Translate API (可選)
+# GOOGLE_TRANSLATE_API_KEY=你的Google翻譯API密鑰
 
-# Site Configuration
-NEXT_PUBLIC_SITE_URL=https://your-domain.vercel.app
-NEXT_PUBLIC_SITE_NAME=ShangYi7
-NEXT_PUBLIC_SITE_DESCRIPTION=ShangYi7's personal website and blog
+# FiveM 監控：固定伺服器清單
+# 支援兩種格式，建議使用 JSON 陣列格式
 
-# Analytics (optional)
-NEXT_PUBLIC_GA_ID=your_google_analytics_id
+# 1) JSON 陣列格式：每個項目包含伺服器名稱與 servers-frontend 的 id
+#   - id 通常為 cfx.re 列表中的伺服器識別符（非 IP:port）
+#   - color 可選，用於前端圖表的線條顏色
+#NEXT_PUBLIC_FIVEM_SERVERS=[
+#  { "name": "伺服器A", "id": "your_cfx_id_a", "color": "#3b82f6" },
+#  { "name": "伺服器B", "id": "your_cfx_id_b", "color": "#ef4444" }
+#]
+
+# 2) 物件對映格式：name->id 映射（不支援 color）
+#NEXT_PUBLIC_FIVEM_SERVERS={
+#  "伺服器A": "your_cfx_id_a",
+#  "伺服器B": "your_cfx_id_b"
+#}
