--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "fivem:cron": "node scripts/fivem-cron.js"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^14.2.32",
+    "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.0",
@@ -23,6 +25,7 @@
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
