--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && New-Item -Path \"out/.nojekyll\" -ItemType File -Force",
+    "build": "next build && node scripts/create-nojekyll.js",
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
